<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.11</version>
        <relativePath/>
    </parent>

    <groupId>com.aihoo</groupId>
    <artifactId>aihoo-api-doctor</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>aihoo-api-doctor</name>
    <description>医生端API应用层</description>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <start-class>com.aihoo.api.doctor.DoctorApiApplication</start-class>
    </properties>

    <dependencies>
        <!-- shared-kernel -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-infra-shared-kernel</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- doctor 域（DoctorUserV2Controller / ChuangLanController 引用 DoctorUserService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-doctor</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- visit 域（ChatV2Controller 引用 ChatService；ChuangLanController 引用 HosVisitService/PrescriptionService/ProposalService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-visit</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- im 域（ChatService 依赖 ImService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-im</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- sys 域（AreaController 引用 AreaService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-sys</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- drug 域（DrugstoreController 引用 DrugstoreService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-drug</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- patient 域（HosSickV2Controller 引用 HosSickService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-patient</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- tcm 域（TcmDiseaseController/TcmSyndromeController 引用 TcmDiseaseService/TcmSyndromeService） -->
        <dependency>
            <groupId>com.aihoo</groupId>
            <artifactId>aihoo-domain-tcm</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- MySQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Apache Commons -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>

        <!-- POI for Excel -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.5</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>

        <!-- Aliyun SDK for AliCloudComponent (DoctorUserServiceImpl) -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>cloudauth20190307</artifactId>
            <version>3.13.0</version>
        </dependency>
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>dysmsapi20170525</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>tea-openapi</artifactId>
            <version>0.3.10</version>
        </dependency>

        <!-- Spring Mock (ApiServiceImpl 等使用 MockMultipartHttpServletRequest) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
        </dependency>

        <!-- IBM ICU (WorkController 使用 BigDecimal) -->
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>74.2</version>
        </dependency>

        <!-- Jakarta Validation API (ImWithdrawMsgRequest 等用 @NotNull) -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
        </dependency>

        <!-- Apache HttpClient Fluent (HospitalPrescriptionUtil) -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>fluent-hc</artifactId>
            <version>4.5.14</version>
        </dependency>

        <!-- Jedis (RedissonConfig) -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
        </dependency>

        <!-- JDOM 1.x (XMLUtils) -->
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>1.1.3</version>
        </dependency>

        <!-- Jaxb (WxaCodeController 微信小程序用) -->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>

        <!-- Fastjson 1.x (ImSendGroupMsgRequest 等旧 IM 请求/响应使用) -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.83</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>